[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/interact/InteractDialogue.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/utils/physics/interact/InteractClickbox.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 10.0

[node name="InteractClickbox" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 2 )
collision_shape = SubResource( 1 )
json_path = "res://ui/interact/dialogue_story_1_dock_intro.json"

[node name="ClickableArea" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractDialogue" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.0
margin_top = 8.0
margin_right = -82.0
margin_bottom = 8.0

[connection signal="input_event" from="." to="." method="_on_InteractClickbox_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_InteractClickbox_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InteractClickbox_mouse_exited"]
[connection signal="dialogue_complete" from="CanvasLayer/InteractDialogue" to="." method="_on_InteractDialogue_dialogue_complete"]
